# status-notifier-item

./: .gitignore  ChangeLog.md  README.md  WatcherMain.hs  appindicator-tray.cabal  default.nix  flake.nix  package.yaml  shell.nix  stack.yaml  status-notifier-item.cabal
src/AppIndicator/: Protocol.hs  Tray.hs  Util.hs
src/StatusNotifier/: Protocol.hs  Tray.hs  Util.hs  Watcher.hs
src/StatusNotifier/Host/: Service.hs
src/StatusNotifier/Item/: Client.hs  Constants.hs
src/StatusNotifier/Menu/: Client.hs  Constants.hs  Service.hs
src/StatusNotifier/Watcher/: Client.hs  Constants.hs  Service.hs  Signals.hs
test/: HostSpec.hs  TestSupport.hs  WatcherSpec.hs
tool/: Main.hs
watcher/: Main.hs
xml/: DBusMenu.xml  StatusNotifierItem.xml
