name:           appindicator-tray
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/IvanMalison/appindicator-tray#readme>
homepage:       https://github.com/IvanMalison/appindicator-tray#readme
bug-reports:    https://github.com/IvanMalison/appindicator-tray/issues
author:         Ivan Malison
maintainer:     IvanMalison@gmail.com
copyright:      2018 Ivan Malison
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/IvanMalison/appindicator-tray

library
  hs-source-dirs:
      src
  build-depends: base >=4.7 && <5
               , dbus >= 0.10.7 && < 1.0
               , gtk3
  exposed-modules:
                  AppIndicator.Protocol
                  AppIndicator.Tray
  other-modules:
      Paths_appindicator_tray
  default-language: Haskell2010
